# cpp-quiz

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  TODO
answer/: CMakeLists.txt  class-tmpl-meta-programming.cxx  ro5.cxx  test.cxx
answer/c-to-cxx/: adl.cxx  auto_vs_template.cxx  cmp.cxx  decltype.cxx  enum-class.cxx  free_func_ptr.cxx  mem_func_ptr.cxx  static-storage-duration.cxx  type-cast.cxx
answer/concurrency/: H2O.cxx  atomic-instantiate.md  bounded_lockless_queue.cxx  fair_spinlock.cxx  group_lock.cxx  handle-destroy.cxx  lockless_queue.cxx  lockless_stack.cxx  rcu.cxx  read-write-lock.cxx  shared.md  spinlock.cxx  stop-thread.md  thread_pool.cxx
answer/mm/: linked_list.cxx  make_ptr.md  object_pool.cxx  shared_ptr.cxx  weak_ptr.cxx
answer/network/: tcp_server.cxx
answer/oop/: ebo.cxx  hide.cxx  initialization.cxx  static-class-member.cxx
answer/rvalue/: move-forward.cxx  ref-bind.cxx  value-category.md
answer/stl/: optional.cxx  ostringstream.cxx  priority_queue.cxx  string.cxx  string_view.cxx  tuple.cxx  unordered_map.cxx  vector.cxx
answer/template/: crtp.cxx  ctad.cxx  function-result.cxx  function-tmpl-deduction.cxx  function-tmpl-meta-programming.cxx  function.cxx  hash_code.cxx  iteator-traits.cxx  result-of.cxx  serialization.cxx  submit.cxx  template-oop.cxx  type-erase.cxx  variadic-template.cxx
cmake/: util.cmake
doc/c-to-cxx/: adl.md  auto_vs_template.md  cmp.md  constinit.md  decltype.md  enum-class.md  func_ptr.md  inline-function.md  static-storage-duration.md  type-cast.md
scripts/: build.sh  gdb-helper.py
(+58 files in other folders)
